--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+  <!-- including MapBox CDN; see https://www.mapbox.com/install/js/cdn-install/ reviewed 2019-07-15 -->
+  <script src='https://api.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.js'></script>
+  <link href='https://api.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.css' rel='stylesheet' />
   <title>Restaurant Reviews</title>
 </head>
 
@@ -17,7 +20,15 @@
 
   <main id="maincontent">
     <section id="map-container">
-      <div id="map"></div>
+      <!-- including MapBox map div; see https://www.mapbox.com/install/js/cdn-add/ reviewed 2019-07-15 -->
+      <div id='map' style='width: 400px; height: 300px;'></div>
+      <script>
+        mapboxgl.accessToken = 'sk.eyJ1IjoiamtlbGxleTM5OSIsImEiOiJjank1NWVmMGgwNDFiM21vMHkwZ3NhemxnIn0.887SXVPDW4Ucaje_ojAKzw';
+        var map = new mapboxgl.Map({
+          container: 'map',
+          style: 'mapbox://styles/mapbox/streets-v11'
+        });
+      </script>
     </section>
     <section>
       <div class="filter-options">
@@ -37,7 +48,7 @@
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
 
-
+R3m0t3C0ntr0l2014MapBox
   <footer id="footer">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
@@ -45,3 +56,9 @@
 </body>
 
 </html>
+
+<!-- REFERENCES RELIED UPON IN index.html AND restaurant.html
+https://www.mapbox.com/install/js/cdn-install/
+https://www.mapbox.com/install/js/cdn-add/
+
+Above reviewed 2019-07-15  -->
