--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+  <!-- Necessary meta tags, including viewport; not including shrink-to-fit=no -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
@@ -21,9 +24,10 @@
   <main id="maincontent">
     <section id="map-container">
       <!-- including MapBox map div; see https://www.mapbox.com/install/js/cdn-add/ reviewed 2019-07-15 -->
-      <div id='map' style='width: 400px; height: 300px;'></div>
+      <!-- Can't seem to move to styles.css without problems -->
+      <div id='map' style='width: 100%; max-width: 100%; height: 300px;'></div>
       <script>
-        mapboxgl.accessToken = 'sk.eyJ1IjoiamtlbGxleTM5OSIsImEiOiJjank1NWVmMGgwNDFiM21vMHkwZ3NhemxnIn0.887SXVPDW4Ucaje_ojAKzw';
+        mapboxgl.accessToken = 'pk.eyJ1IjoiamtlbGxleTM5OSIsImEiOiJjank1NWFoZm0wM3h6M2NsaWc0aG9xeDZhIn0.h5Y873apUNR4dRUnBZNvyQ';
         var map = new mapboxgl.Map({
           container: 'map',
           style: 'mapbox://styles/mapbox/streets-v11'
@@ -47,8 +51,6 @@
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
-
-R3m0t3C0ntr0l2014MapBox
   <footer id="footer">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
