--- a/restaurant.html
+++ b/restaurant.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+  <!-- Necessary meta tags, including viewport; not including shrink-to-fit=no -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
@@ -34,9 +37,10 @@
     <!-- Beginning map -->
     <section id="map-container">
       <!-- including MapBox map div; see https://www.mapbox.com/install/js/cdn-add/ reviewed 2019-07-15 -->
-      <div id='map' style='width: 400px; height: 300px;'></div>
+      <!-- Can't seem to move to styles.css without problems -->
+      <div id='map' style='width: 100%; max-width: 100%; height: 300px;'></div>
       <script>
-        mapboxgl.accessToken = 'sk.eyJ1IjoiamtlbGxleTM5OSIsImEiOiJjank1NWVmMGgwNDFiM21vMHkwZ3NhemxnIn0.887SXVPDW4Ucaje_ojAKzw';
+        mapboxgl.accessToken = 'pk.eyJ1IjoiamtlbGxleTM5OSIsImEiOiJjank1NWFoZm0wM3h6M2NsaWc0aG9xeDZhIn0.h5Y873apUNR4dRUnBZNvyQ';
         var map = new mapboxgl.Map({
           container: 'map',
           style: 'mapbox://styles/mapbox/streets-v11'
