feat first rough pass on ServiceWorker
TODO resolve ServiceWorker bugs and improve testing
fix refined basic responsive behavior

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </section>
     <section>
       <div class="filter-options">
-        <h2>Filter Results</h2>
+        <h2 tabindex='0'>Filter Results</h2>
         <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
@@ -54,6 +54,20 @@
   <footer id="footer">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
+<!--   registering service worker
+  based on:
+    https://github.com/jakearchibald/simple-serviceworker-tutorial/blob/gh-pages/index.html
+    https://developers.google.com/web/fundamentals/primers/service-workers/
+    https://developers.google.com/web/fundamentals/primers/service-workers/registration
+      The approach below is based on the last example in the resource immediately above.
+    reviewed 2019-07-21 -->
+  <script type="text/javascript">
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function() {
+        navigator.serviceWorker.register('/sw.js');
+      });
+    }
+  </script>
 
 </body>
 
@@ -62,5 +76,10 @@
 <!-- REFERENCES RELIED UPON IN index.html AND restaurant.html
 https://www.mapbox.com/install/js/cdn-install/
 https://www.mapbox.com/install/js/cdn-add/
-
-Above reviewed 2019-07-15  -->
+Above reviewed 2019-07-15
+https://developer.mozilla.org/en-US/docs/Learn/Accessibility/HTML
+Above reviewed 2019-07-20
+https://github.com/jakearchibald/simple-serviceworker-tutorial/blob/gh-pages/index.html
+https://developers.google.com/web/fundamentals/primers/service-workers/
+https://developers.google.com/web/fundamentals/primers/service-workers/registration
+Above reviewed 2019-07-21-->
