--- a/restaurant.html
+++ b/restaurant.html
@@ -25,7 +25,7 @@
     </nav>
     <!-- Beginning breadcrumb -->
     <ul id="breadcrumb" >
-      <li><a href="/">Home</a></li>
+      <li><a href="/" id="breadcrumb-return-to-home-page">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
     <!-- End nav -->
