feat Service Worker working offline to some extent
fix improved responsiveness and accessibility
    based on suggestions from first anonymous Udacity reviewer
    and two additional sources reviewed 2019-07-24:
    https://matthewcranford.com/restaurant-reviews-app-walkthrough-part-2-responsiveness/
    https://matthewcranford.com/restaurant-reviews-app-walkthrough-part-4-service-workers/

TODO    determine how Service Worker should function with mapbox, leaflet, and other
        apis

        At present (see screenshots from 2019-07-24 at 9.25.38 PM -
        2019-07-24 at 9.27.50 PM), as shown in Chrome Dev Tools Application,
        1.  the Service Worker is writing to Cache Storage
        2.  some cached files, e.g., styles.css, are being found
        3.  other files are not being found, e.g., leaflet.css
        4.  the Service Worker itself has a healthy status
        5.  however, when entering offline mode in Chrome Dev Tools Application,
            A.  a warning or error is generated regarding sw.js
            B.  the map and the leaflet no longer display in the UI

--- a/index.html
+++ b/index.html
@@ -63,4 +63,6 @@ https://www.mapbox.com/install/js/cdn-install/
 https://www.mapbox.com/install/js/cdn-add/
 Above reviewed 2019-07-15
 https://developer.mozilla.org/en-US/docs/Learn/Accessibility/HTML
-Above reviewed 2019-07-20 -->
+Above reviewed 2019-07-20
+several suggestions re specific implementation from first anonymous Udacity reviewer's comments
+Above reviewed 2019-07-24 -->
